--- a/ECE Sem Result Calculator/style.css
+++ b/ECE Sem Result Calculator/style.css
@@ -16,7 +16,7 @@ nav {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     max-width: 500px;
-    margin: 10px auto;
+    margin: 2px auto;
     background: var(--col2);
     justify-content: space-evenly;
     justify-items: center;
@@ -70,14 +70,19 @@ button {
 }
 
 .title {
-    max-width: 300px;
+    max-width: 500px;
     margin: 10px auto;
     padding: 5px 10px;
     font-weight: bolder;
     font-family: sans-serif;
     font-size: 18px;
+    text-align: center;
 }
 
+.info{
+    text-align: center;
+    margin: -10px auto -5px auto;
+}
 
 .notSub {
     background-color: var(--col2);
